// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> should render as expected when all items are supposed to be shown 1`] = `
<Footer
  showCouponsHint={true}
  showTaxDisclaimer={true}
>
  <CouponsHint>
    <Translate
      className="css-7apcdo"
      params={Object {}}
      role={null}
      string="cart.coupons_not_supported"
      transform={null}
    >
      <span
        className="css-7apcdo"
        role={null}
      >
        cart.coupons_not_supported
      </span>
    </Translate>
  </CouponsHint>
  <TaxDisclaimer>
    <Portal
      name="product.tax-disclaimer.before"
      props={null}
    />
    <Portal
      name="product.tax-disclaimer"
      props={null}
    />
    <Portal
      name="product.tax-disclaimer.after"
      props={null}
    />
  </TaxDisclaimer>
</Footer>
`;

exports[`<Footer /> should render as expected when no items are supposed to be shown 1`] = `
<Footer
  showCouponsHint={false}
  showTaxDisclaimer={false}
/>
`;

exports[`<Footer /> should render as expected when only the tax disclaimer is supposed to be shown 1`] = `
<Footer
  showCouponsHint={false}
  showTaxDisclaimer={true}
>
  <TaxDisclaimer>
    <Portal
      name="product.tax-disclaimer.before"
      props={null}
    />
    <Portal
      name="product.tax-disclaimer"
      props={null}
    />
    <Portal
      name="product.tax-disclaimer.after"
      props={null}
    />
  </TaxDisclaimer>
</Footer>
`;

exports[`<Footer /> should render as expected when only the the coupons hint is supposed to be shown 1`] = `
<Footer
  showCouponsHint={true}
  showTaxDisclaimer={false}
>
  <CouponsHint>
    <Translate
      className="css-7apcdo"
      params={Object {}}
      role={null}
      string="cart.coupons_not_supported"
      transform={null}
    >
      <span
        className="css-7apcdo"
        role={null}
      >
        cart.coupons_not_supported
      </span>
    </Translate>
  </CouponsHint>
</Footer>
`;
